# agent-army

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
dashboard/: package-lock.json  package.json
dashboard/src/: App.tsx
dashboard/src/api/: client.ts  types.ts  websocket.ts
dashboard/src/components/agents/: AgentCard.tsx
dashboard/src/components/dashboard/: ActivityFeed.tsx  StatsCards.tsx
dashboard/src/components/layout/: Sidebar.tsx
dashboard/src/components/tasks/: TaskForm.tsx  TaskList.tsx
dashboard/src/hooks/: useWebSocket.ts
dashboard/src/pages/: AgentsPage.tsx  DashboardPage.tsx  TaskDetailPage.tsx  TasksPage.tsx
src/agent_army/: __init__.py  cli.py  orchestrator.py
src/agent_army/agents/: __init__.py  deal_tracker.py  email_sender.py  email_writer.py  prospect_finder.py  quality_control.py  research_manager.py  response_monitor.py  response_writer.py  task_manager.py
src/agent_army/api/: __init__.py  app.py  schemas.py
src/agent_army/api/routes/: agents.py  dashboard.py  tasks.py  websocket.py
src/agent_army/core/: __init__.py  base_agent.py  llm_service.py  message_bus.py  registry.py
src/agent_army/db/: __init__.py  database.py  models.py
src/agent_army/scrapers/: __init__.py  browser_manager.py  website_analyzer.py  zefix_client.py
src/agent_army/templates/: __init__.py  email_templates.py
src/agent_army/utils/: __init__.py  config.py  logging.py
tests/: __init__.py  conftest.py  test_agents.py  test_core.py  test_database.py  test_integration.py
